--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="card text-white bg-secondary mb-3" style="max-width: 80rem;max-height: 300rem;">
             <a href="http://www.oxford-ost.de/?lang=de#" class="card text-white bg-secondary">
-              <div class="card-header"><h3>Oxford Ost<div class="float-right font-italic small text-danger"> 1,3 km </div></h3></div>
+              <div class="card-header"><h3>Oxford Ost<div class="float-right font-italic small text-danger"> <p id="dis"></p> </div></h3></div>
             </a>
             <a href="http://www.oxford-ost.de/?lang=de#" >
               <img  class="card-img-top" src="images/OxOst.jpg" alt="Card image" style="max-width: 100rem;">
@@ -69,9 +69,6 @@
               
             </div>
           </div>
-          
-          <div>Your Location:</div>
-          <p id="demo"></p>
       </div>
 
 
