fixed responsive Design

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS 
+      <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LunchFinder</title>
   </head>
   <body onload="init()">
@@ -47,7 +50,7 @@
 
 
       <div class="container" >
-        <ul class="card-columns" id = "LocationList">
+        <div class="card-columns" id = "LocationList">
 
           <li class="card">
             <img class="card-img-top" src="images/KITMensa.png" alt="Card image cap">
@@ -85,7 +88,8 @@
             </div> 
           </li>
             
-          <!--<li class="card text-white bg-secondary mb-3" style="max-width: 80rem;max-height: 300rem;">
+          <!--
+          <li class="card text-white bg-secondary mb-3" style="max-width: 80rem;max-height: 300rem;">
             <a href="http://www.oxford-ost.de/?lang=de#" class="card text-white bg-secondary">
               <div class="card-header"><h3>Mensa<div class="float-right font-italic small text-danger"> <b id="MensaDis"></b> </div></h3></div>
             </a>
@@ -168,7 +172,7 @@
 
 
 
-        </ul>
+        </div>
       </div>
 
 
