New Color for Android ChromeBar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#363a40" />
 
     <!-- Bootstrap CSS 
       <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
