--- a/LocationSites/Oxfords/OxfordOst/OxOst.html
+++ b/LocationSites/Oxfords/OxfordOst/OxOst.html
@@ -53,13 +53,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img src="images/KITMensa.png" class="d-block w-100 h-25" alt="...">
+              <img src="images/OxOst_4.jpg" class="d-block img-fluid" alt="...">
             </div>
             <div class="carousel-item">
-            <img src="images/OxOst.jpg" class="d-block w-100" alt="...">
+              <img src="images/OxOst_1.jpg" class="d-block img-fluid" alt="...">
             </div>
             <div class="carousel-item">
-            <img src="images/KITMensa.png" class="d-block w-100" alt="...">
+              <img src="images/OxOst_2.jpg" class="d-block img-fluid" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -70,7 +70,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-        </div>
+    </div>
 
 
 
