--- a/LocationSites/Oxfords/OxfordOst/OxOst.html
+++ b/LocationSites/Oxfords/OxfordOst/OxOst.html
@@ -53,13 +53,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/OxOst_4.jpg" class="d-block img-fluid" alt="...">
+              <img src="images/Placeholder.jpg" class="d-block img-fluid" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="images/OxOst_1.jpg" class="d-block img-fluid" alt="...">
+              <img src="images/Placeholder.jpg" class="d-block img-fluid" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="images/OxOst_2.jpg" class="d-block img-fluid" alt="...">
+              <img src="images/Placeholder.jpg" class="d-block img-fluid" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
