--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
           <li class="card bg-Mensa">
-            <img class="card-img-top" src="LocationSites/Mensen/KIT_Mensa/images/KITMensa_1.png" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
+            <img class="card-img-top" src="LocationSites/Mensen/KIT_Mensa/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
               <h5 class="card-title">Mensa (Adenauer-Ring)<i class="float-right distanceColor" id="MensaAdenauerDis"></i></h5> 
             </a>
@@ -86,7 +86,7 @@
           
           
           <li class="card bg-Mensa">
-            <img class="card-img-top" src="LocationSites/Mensen/Moltke_Mensa/images/MoltkeMensa_1.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseMensaMoltke">
+            <img class="card-img-top" src="LocationSites/Mensen/Moltke_Mensa/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseMensaMoltke">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseMensaMoltke">
               <h5 class="card-title">Mensa (Moltkestr.)<i class="float-right distanceColor" id="MensaMoltkeDis"></i></h5> 
             </a>
@@ -114,7 +114,7 @@
 
 
           <li class="card bg-OxFord">
-            <img class="card-img-top" src="LocationSites/Oxfords/OxfordOst/images/OxOst_4.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxOst">
+            <img class="card-img-top" src="LocationSites/Oxfords/OxfordOst/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxOst">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxOst">
               <h5 class="card-title">Oxford Ost <i class="float-right distanceColor" id="OxOstDis"></i></h5> 
             </a>
@@ -148,7 +148,7 @@
 
 
           <li class="card  bg-OxFord">
-            <img class="card-img-top" src="LocationSites/Oxfords/OxfordCafe/images/OxCafe_2.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCafe">
+            <img class="card-img-top" src="LocationSites/Oxfords/OxfordCafe/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCafe">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxCafe">
               <h5 class="card-title">Oxford Cafe <i class="float-right distanceColor" id="OxCafeDis"></i></h5> 
             </a>
@@ -181,7 +181,7 @@
           </li>
 
           <li class="card bg-OxFord">
-            <img class="card-img-top" src="LocationSites/Oxfords/OxfordPub/images/OxPub_2.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxPub">
+            <img class="card-img-top" src="LocationSites/Oxfords/OxfordPub/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxPub">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxPub">
               <h5 class="card-title">Oxford Pub <i class="float-right text-danger" id="OxPubDis"></i></h5> 
             </a>
@@ -215,7 +215,7 @@
 
 
           <li class="card bg-OxFord">
-            <img class="card-img-top" src="LocationSites/Oxfords/OxfordCharles/images/OxChrales_2.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
+            <img class="card-img-top" src="LocationSites/Oxfords/OxfordCharles/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxCharles">
               <h5 class="card-title">Charles Oxford <i class="float-right text-danger" id="OxCharlesDis"></i></h5> 
             </a>
