--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
 
     <title>LunchFinder</title>
+    <link rel = "icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png">
+    <!-- For apple devices -->
+    <link rel = "apple-touch-icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png"/>
+
   </head>
   <body onload="init()">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
