Fixed card "alignment" in 2 col view
Cards don't change order in 2 col view
Changed name of "Mensa Adenauer-Ring"
SortLocationListByScreenSize.js created but not implemented

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li class="card bg-Mensa">
             <img class="card-img-top" src="LocationSites/Mensen/KIT_Mensa/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
-              <h5 class="card-title">Mensa (Adenauer-Ring)<i class="float-right distanceColor" id="MensaAdenauerDis"></i></h5> 
+              <h5 class="card-title">Mensa (Adenauer)<i class="float-right distanceColor" id="MensaAdenauerDis"></i></h5> 
             </a>
 
             <a class="collapse card-body text-center" id="collapseMensaAdenauer" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
