Buttons on OxOst Page now have their function

--- a/LocationSites/Oxfords/OxfordOst/OxOst.html
+++ b/LocationSites/Oxfords/OxfordOst/OxOst.html
@@ -146,30 +146,31 @@
 
     <div class="card-deck">
       <div class="card">
-        <div class="card-body">
+        <button class="card-body btn btn-light" onclick="open_OxOst_Phone()">
           <img class="icon" src="images/icons/phone.svg">
           <h5 class="card-title text-center">Phone</h5>
           <p class="card-text text-center">+4972166384455</p>
-        </div>
+        </button>
       </div>
       <div class="card">
-        <div class="card-body">
+        <button class="card-body btn btn-light" onclick="open_OxOst_Mail()">
           <img class="icon" src="images/icons/mail.svg">
           <h5 class="card-title text-center">Mail</h5>
           <p class="card-text text-center">reservierung@oxford-ost.de</p>
-        </div>
+        </button>
       </div>
-      <a class="card a" href="#">
-        <div class="card-body">
+      <div class="card a" >
+        <button class="card-body btn btn-light" onclick="open_OxOst_Map()" >
           <img class="icon" src="images/icons/map-pin.svg">
           <h5 class="card-title text-center">Maps</h5>
           <p class="card-text text-center"> Gerwigstraße 2  </br>
                                             76131 Karlsruhe </br>
                                             Deutschland</p>
-        </div>
-      </a>
-      
+        </button>
+      </div>
     </div>
+
+
 
     <br>
     <br>
