--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 
               </p>              
               <button onclick="open_OxOst_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
+              <button onclick="open_OxOst_Map()" type="button" class="btn btn-success btn-lg btn-block mt-2">Show on Maps</button>
             </a> 
           </li>
 
