Added dynaminc OxCafe Site for Testing

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   Rucola & Speck dazu Pommes
 
               </p>              
-              <button onclick="open_OxOst_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
+              <button onclick="open_OxCafe_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
             </a> 
           </li>
 
