Maybe a fix for shake

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel = "icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png">
     <!-- For apple devices -->
     <link rel = "apple-touch-icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png"/>
-    <script data-main="js/randomChoice.js" src="js/require.js"></script>
+    <script data-main="js/randomChoice" src="js/require.js"></script>
   </head>
   <body onload="init()">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
