Footer, Datenschutz und Anmerkung zu Backround

--- a/LocationSites/Oxfords/OxfordCafe/OxCafe.html
+++ b/LocationSites/Oxfords/OxfordCafe/OxCafe.html
@@ -193,7 +193,14 @@
 
 
 
-
+<footer class=" bg-dark text-white">
+  <div class="container-fluid">
+      <div class="row">
+          <a class="col text-left small" href="../../../Datenschutzerklaerung.html">Datenschutzerklärung</a>
+          <div class="col text-right small align-self-end">©2020 LunchFinder-ka</div>
+      </div>
+  </div>
+</footer>
 
       
     <!-- Optional JavaScript -->
