--- a/LocationSites/Oxfords/OxfordOst/OxOst.html
+++ b/LocationSites/Oxfords/OxfordOst/OxOst.html
@@ -178,7 +178,7 @@
 
   <div class="container">
     <div class='embed-responsive' style='padding-bottom:100%'>
-      <object data='https://cdn.website.dish.co/media/c1/ab/1853790/Oxford-OST-Ost-6-12-01.pdf' type='application/pdf' width='100%' height='100%'></object>
+      <object data='https://cdn.website.dish.co/media/66/8e/1876408/Oxford-OST-Ost-13-19-01.pdf' type='application/pdf' width='100%' height='100%'></object>
   </div>
 </div>
 </div>
@@ -193,7 +193,14 @@
 
 
 
-
+<footer class="footer bg-dark text-white">
+  <div class="container-fluid">
+      <div class="row">
+          <a class="col text-left small" href="../../../Datenschutzerklaerung.html">Datenschutzerklärung</a>
+          <div class="col text-right small align-self-end">©2020 LunchFinder-ka</div>
+      </div>
+  </div>
+</footer>
       
     <!-- Optional JavaScript -->
     <script src="SiteData.js"> </script>
