MenuTitle and Background added

--- a/LocationSites/Oxfords/OxfordCafe/OxCafe.html
+++ b/LocationSites/Oxfords/OxfordCafe/OxCafe.html
@@ -11,7 +11,7 @@
     
     <!-- My CSS -->
     <link rel="stylesheet" type="text/css" href="../../../css/custom.css">
-    <link rel="stylesheet" type="text/css" href="Carousel.css">
+    <link rel="stylesheet" type="text/css" href="LocationSite.css">
 
     <title>LunchFinder</title>
     <link rel = "icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png">
@@ -169,7 +169,7 @@
 
   <div class="carousel" id="Menu-Pic">
     <div class="carousel-caption">
-      <h1>Menu</h1>                
+      <h1 id="MenuTitle">Menu</h1>                   
     </div>
   </div>
 
