Added Error Messages for GeoLocation

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 
 
       <div class="container pt-3 footerSpacing">
+        <div id="warningSpace">
+
+        </div>
         <div class="card-columns" id = "LocationList">
           
 
