--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- For apple devices -->
     <link rel = "apple-touch-icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png"/>
   </head>
-  <body onload="init()">
+  <body onload="init()" id="indexBody">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">LunchFinder</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +68,6 @@
               </ul>   
             </div>
       </nav>
-
 
 
 
@@ -207,7 +206,7 @@
           <li class="card bg-OxFord">
             <img class="card-img-top" src="LocationSites/Oxfords/OxfordPub/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxPub">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxPub">
-              <h5 class="card-title">Oxford Pub <i class="float-right text-danger" id="OxPubDis"></i></h5> 
+              <h5 class="card-title">Oxford Pub <i class="float-right distanceColor" id="OxPubDis"></i></h5> 
             </a>
 
               <a class="collapse card-body text-center" id="collapseOxPub" role="button" data-toggle="collapse" href="#collapseOxPub">
@@ -241,7 +240,7 @@
           <li class="card bg-OxFord">
             <img class="card-img-top" src="LocationSites/Oxfords/OxfordCharles/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxCharles">
-              <h5 class="card-title">Charles Oxford <i class="float-right text-danger" id="OxCharlesDis"></i></h5> 
+              <h5 class="card-title">Charles Oxford <i class="float-right distanceColor" id="OxCharlesDis"></i></h5> 
             </a>
 
 
