Test of scalable images in cards

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 
           <li class="card bg-OxFord">
-            <img class="card-img-top" src="LocationSites/Oxfords/OxfordCharles/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
+            <a class="card-img-top" id='OxOstCarousel1' alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxCharles">
               <h5 class="card-title">Charles Oxford <i class="float-right distanceColor" id="OxCharlesDis"></i></h5> 
             </a>
