Scalable images for all Cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="previewImages.css">
 
     <title>LunchFinder</title>
     <link rel = "icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png">
@@ -82,7 +83,7 @@
 
 
           <li class="card bg-Mensa">
-            <img class="card-img-top" src="LocationSites/Canteens/KIT_Mensa/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
+            <a class="card-img-top" id='MensaAdenauerImage' alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
               <h5 class="card-title">Mensa (Adenauer)<i class="float-right distanceColor" id="MensaAdenauerDis"></i></h5> 
             </a>
@@ -108,7 +109,7 @@
           
           
           <li class="card bg-Mensa">
-            <img class="card-img-top" src="LocationSites/Canteens/Moltke_Mensa/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseMensaMoltke">
+            <a class="card-img-top" id='MensaMoltkeImage' alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseMensaMoltke">
               <h5 class="card-title">Mensa (Moltkestr.)<i class="float-right distanceColor" id="MensaMoltkeDis"></i></h5> 
             </a>
@@ -136,7 +137,7 @@
 
 
           <li class="card bg-OxFord">
-            <img class="card-img-top" src="LocationSites/Oxfords/OxfordOst/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxOst">
+            <a class="card-img-top" id='OxOstImage' alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxOst">
               <h5 class="card-title">Oxford Ost <i class="float-right distanceColor" id="OxOstDis"></i></h5> 
             </a>
@@ -171,7 +172,7 @@
 
 
           <li class="card  bg-OxFord">
-            <img class="card-img-top" src="LocationSites/Oxfords/OxfordCafe/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCafe">
+            <a class="card-img-top" id='OxCafeImage' alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxCafe">
               <h5 class="card-title">Oxford Cafe <i class="float-right distanceColor" id="OxCafeDis"></i></h5> 
             </a>
@@ -204,7 +205,7 @@
           </li>
 
           <li class="card bg-OxFord">
-            <img class="card-img-top" src="LocationSites/Oxfords/OxfordPub/images/Placeholder.jpg" alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxPub">
+            <a class="card-img-top" id='OxPubImage' alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxPub">
               <h5 class="card-title">Oxford Pub <i class="float-right distanceColor" id="OxPubDis"></i></h5> 
             </a>
@@ -238,7 +239,7 @@
 
 
           <li class="card bg-OxFord">
-            <a class="card-img-top" id='OxOstCarousel1' alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
+            <a class="card-img-top" id='OxCharlesImage' alt="Card image cap" role="button" data-toggle="collapse" href="#collapseOxCharles">
             <a class="card-body" role="button" data-toggle="collapse" href="#collapseOxCharles">
               <h5 class="card-title">Charles Oxford <i class="float-right distanceColor" id="OxCharlesDis"></i></h5> 
             </a>
