PDF now loads dynamic & NavbarNavigation imrpoved

--- a/LocationSites/Oxfords/OxfordCafe/Overview.html
+++ b/LocationSites/Oxfords/OxfordCafe/Overview.html
@@ -25,7 +25,7 @@
 
   <body onload="init()">
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">LunchFinder</a>
+      <a class="navbar-brand" href="../../../index.html">LunchFinder</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -177,10 +177,7 @@
   <br>
   <br>
 
-  <div class="container">
-    <div class='embed-responsive' style='padding-bottom:100%'>
-      <object data='https://cdn.website.dish.co/media/c1/ab/1853790/Oxford-OST-Ost-6-12-01.pdf' type='application/pdf' width='100%' height='100%'></object>
-  </div>
+  <div class="container" id="PDF-Container"></div>
 </div>
 </div>
 
@@ -205,7 +202,7 @@
       
     <!-- Optional JavaScript -->
     <script src="SiteData.js"> </script>
-    <script src="../../../js/Websites.js"> </script>
+    <script src="../oxfordsNavbarLinks.js"> </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
