--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
     <!-- Optional JavaScript -->
     <script src="js/LocationSort.js"> </script>
-    <script src="js/Websites.js"> </script>
+    <script src="indexLocationButtonAndNavbarFunctions.js"> </script>
     <script src="js/SortLocationListByScreenSize.js"> </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
