ox Overview.html now only has one version

--- a/LocationSites/Oxfords/OxfordCafe/Overview.html
+++ b/LocationSites/Oxfords/OxfordCafe/Overview.html
@@ -17,7 +17,7 @@
     <link rel = "icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png">
     <!-- For apple devices -->
     <link rel = "apple-touch-icon" type = "image/png" href = "https://img.icons8.com/material-outlined/24/000000/cutlery.png"/>
-  
+
   </head>
 
 
@@ -157,14 +157,12 @@
       <div class="card-deck" id="Info-Card-Deck">
       </div>
 
-
       <br>
       <br>
       <br>
 
     </div>
 </div>
-
 
 
   <div class="carousel" id="Menu-Pic">
@@ -179,7 +177,6 @@
 
   <div class="container" id="PDF-Container"></div>
 </div>
-</div>
 
 
 
@@ -190,7 +187,8 @@
 
 
 
-<footer class=" bg-dark text-white">
+
+<footer class="footer bg-dark text-white">
   <div class="container-fluid">
       <div class="row">
           <a class="col text-left small" href="../../../Datenschutzerklaerung.html">Datenschutzerklärung</a>
@@ -198,7 +196,6 @@
       </div>
   </div>
 </footer>
-
       
     <!-- Optional JavaScript -->
     <script src="SiteData.js"> </script>
