MensaSite concept fin

--- a/LocationSites/Canteens/KIT_Mensa/Overview.html
+++ b/LocationSites/Canteens/KIT_Mensa/Overview.html
@@ -255,7 +255,7 @@
 
 
 
-<div class="Info-Container" id="Linien">  
+<div class="Info-Container footerSpacing" id="Linien">  
     
     <div class="container card-columns pt-4">
 
