--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               
 
 
-              <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+              <!-- <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Filter
@@ -66,7 +66,7 @@
                     <div class="dropdown-divider"></div>
                     </div>
                   </li>
-              </ul>   
+              </ul>    -->
             </div>
       </nav>
 
@@ -91,15 +91,15 @@
             <a class="collapse card-body text-center" id="collapseMensaAdenauer" role="button" data-toggle="collapse" href="#collapseMensaAdenauer">
               <p id="OxOst_Daily_1">
                 <b>
-                  Schwedische Köttbullar <br>
+                  Hähnchengeschnetzeltes <br>
                 </b>
-                  mit Rahmsoße, Petersilienkartoffeln und Preiselbeeren
+                  mit Reis
               </p>
               <p id="OxOst_Daily_2">
                 <b>
-                  Gemüse - Couscouspfanne <br>
+                  Sojageschnetzeltes <br>
                 </b>
-                  mit Joghurt - Ingwerdip
+                  mit Reis
               </p>
                            
               <button onclick="open_MensaAdenauer_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
@@ -128,7 +128,7 @@
                 </b>
                   mit Joghurt - Ingwerdip
               </p>             
-              <button onclick="open_MensaMoltke_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
+              <button onclick="open_MensaMoltke_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4" disabled>Show Menu</button>
               <button onclick="open_MensaMoltke_Map()" type="button" class="btn btn-success btn-lg btn-block mt-2">Show on Maps</button>
 
             </a> 
