--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   mit Reis
               </p>
                            
-              <button onclick="open_MensaAdenauer_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
+              <button onclick="open_MensaAdenauer_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Details</button>
               <button onclick="open_MensaAdenauer_Map()" type="button" class="btn btn-success btn-lg btn-block mt-2">Show on Maps</button>
             </a> 
           </li>
@@ -128,7 +128,7 @@
                 </b>
                   mit Joghurt - Ingwerdip
               </p>             
-              <button onclick="open_MensaMoltke_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4" disabled>Show Menu</button>
+              <button onclick="open_MensaMoltke_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4" disabled>Show Details</button>
               <button onclick="open_MensaMoltke_Map()" type="button" class="btn btn-success btn-lg btn-block mt-2">Show on Maps</button>
 
             </a> 
@@ -168,7 +168,7 @@
                   Rucola & Speck dazu Pommes
 
               </p>              
-              <button onclick="open_OxOst_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
+              <button onclick="open_OxOst_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Details</button>
               <button onclick="open_OxOst_Map()" type="button" class="btn btn-success btn-lg btn-block mt-2">Show on Maps</button>
             </a> 
           </li>
@@ -183,27 +183,28 @@
             <a class="collapse card-body text-center" id="collapseOxCafe" role="button" data-toggle="collapse" href="#collapseOxCafe">
               <p id="OxOst_Daily_1">
                 <b>
-                  SPAGHETTI <br>
+                  MOZZARELLA BURGER MEDITERRAN <br>
                 </b>
-                  mit eingelegten Tomaten, Rucola
-                  & frisch geriebenem Parmesan
+                  gegrillter Mozzarella, Rucola, eingelegte Tomaten,
+                  Peperoni & Oliven + Pommes
               </p>
               <p id="OxOst_Daily_2">
                 <b>
-                  LEICHTE SPÄTZLE <br>
+                  RACLETTE BURGER <br>
                 </b>
-                  Käse-Gemüse Spätzle
-                  an Beilagensalat
+                  180g Beef Burger mit französischem Raclette-Käse,
+                  Rotkohl & Röstzwiebeln
+                  + Pommes
               </p>
               <p id="OxOst_Daily_3">
-                <b>
+                <!-- <b>
                   DER ELSÄSSER <br>
                 </b>
                   180 g Beef Burger mit Flammkuchen Creme,
-                  Rucola & Speck dazu Pommes
+                  Rucola & Speck dazu Pommes -->
 
               </p>              
-              <button onclick="open_OxCafe_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
+              <button onclick="open_OxCafe_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Details</button>
               <button onclick="open_OxCafe_Map()" type="button" class="btn btn-success btn-lg btn-block mt-2">Show on Maps</button>
             </a> 
           </li>
@@ -237,7 +238,7 @@
                     Rucola & Speck dazu Pommes
   
                 </p>              
-                <button onclick="open_OxPub_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
+                <button onclick="open_OxPub_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Details</button>
                 <button onclick="open_OxPub_Map()" type="button" class="btn btn-success btn-lg btn-block mt-2">Show on Maps</button>
 
               </a> 
@@ -274,7 +275,7 @@
                   Rucola & Speck dazu Pommes
 
               </p>              
-              <button onclick="open_OxCharles_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Menu</button>
+              <button onclick="open_OxCharles_site()" type="button" class="btn btn-dark btn-lg btn-block mt-4">Show Details</button>
               <button onclick="open_OxCharles_Map()" type="button" class="btn btn-success btn-lg btn-block mt-2">Show on Maps</button>
             </a> 
           </li>
